<?xml version="1.0"?>
<package format="3">
  <name>apartment_sim</name>
  <version>0.1.0</version>
  <description>Indoor apartment Gazebo simulation with a multi-sensor TurtleBot3 Waffle.</description>
  <maintainer email="vaidyasuryansh@gmail.com">byapak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
